# AiAstro_Taro

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
.cursor/: gsd-file-manifest.json  gsd-install-state.json  hooks.json
.cursor/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.cursor/commands/: gsd-add-tests.md  gsd-ai-integration-phase.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-capture.md  gsd-cleanup.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-discuss-phase.md  gsd-docs-update.md  gsd-eval-review.md  gsd-execute-phase.md  gsd-explore.md  gsd-extract-learnings.md  gsd-fast.md  gsd-forensics.md  gsd-graphify.md  gsd-health.md  gsd-help.md  gsd-import.md  gsd-inbox.md  gsd-ingest-docs.md  gsd-manager.md  gsd-map-codebase.md  gsd-milestone-summary.md  gsd-mvp-phase.md  gsd-new-milestone.md  gsd-new-project.md  gsd-pause-work.md  gsd-phase.md  gsd-plan-phase.md  gsd-plan-review-convergence.md  gsd-pr-branch.md  gsd-profile-user.md  gsd-progress.md  gsd-quick.md  (+19 more)
.cursor/gsd-core/references/: artifact-types.md  context-budget.md  model-profile-resolution.md  planner-load-graph-context.md  planner-mvp-mode.md  verification-patterns.md
.cursor/gsd-core/templates/: phase-prompt.md
.cursor/gsd-core/workflows/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  debug.md  diagnose-issues.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  do.md  docs-update.md  edit-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  extract-learnings.md  forensics.md  graduation.md  health.md  import.md  ingest-docs.md  insert-phase.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  mvp-phase.md  new-milestone.md  new-project.md  (+39 more)
.cursor/skills/gsd-add-tests/: SKILL.md
.planning/: ROADMAP.md  STATE.md
docs/: security-git-history-purge.md
scripts/: aitaro_api.py  aitaro_setup.py  purge-env-from-history.sh  scan-secrets.sh
src/: new_temp.py
src/backend/: app.py  models.py  schemas.py
src/frontend/: app.py  check_city.py  footer.py  locales.py  login_menu.py  schema.py  templates.py  utils.py
src/tarotmcp/: .gitignore  .npmignore  Dockerfile  README.md  debug-sse.sh  deploy.sh  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_add_memory_resilience.py  test_aitaro_scripts.py  test_context_trust.py  test_langfuse_config_prop.py  test_lifespan_required_env.py  test_memory_tools.py  test_observability.py  test_readme_quickstart.py  test_required_env.py  test_router.py  test_routing.py  test_spread_name_schema.py  test_stream_endpoint.py  test_taro_cards.py  test_tarot_factory_message.py
tests/evals/: goldens_router.json  goldens_taro.json  metrics.py  test_router_eval.py  test_taro_eval.py
(+186 files in other folders)
