[project]
name = "aitaro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "grandalf>=0.8",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.15.1",
    "rich>=14.1.0",
    "streamlit>=1.48.1",
    "streamlit-chat>=0.1.1",
    "uvicorn>=0.35.0",
]
