[project]
name = "aitaro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "flatlib>=0.2.1",
    "geopy>=2.4.1",
    "grandalf>=0.8",
    "htbuilder>=0.9.0",
    "kerykeion>=4.26.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.23",
    "matplotlib>=3.10.6",
    "psycopg2>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pycountry>=24.6.1",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.15.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "streamlit-chat>=0.1.1",
    "uvicorn>=0.35.0",
    "zep>=0.0.1",
    "zep-cloud>=3.4.3",
    "zep-python>=2.0.2",
]
